    - Merged Welder 1 and Basic Alloying into one tech, and re-named it to Brass Processing.
    - Changed Crude oil fractional distillation to a trigger technology.
    - Changed Chlorine processing to a trigger technology.
    - Changed butene/butane cracking to washing plants, to lower the need of chemical plants.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.
    - Fixed a lot of minor locale issues, like capatalisation and random bs like that.
    - Fixed the burn-inator being unlocked twice.
    - Fixed the stainless steel tank not actually taking.. stainless steel.
    - Fixed mining productivity and research speed not being unlocked by their respective tech trees.
    - Fixed rubidium's ratios being fucked in comparison to the amount needed in science.
    - FINALLY MADE ACID PLANTS LOOK DIFFERENT OH MY GOD
    - Fixed the vanadium modular battery technologies not having the correct color.
    - Fixed the vanadium modular batterie MK2's recipe.
    - Moved calcium chloride into the calcium subgroup.
    - Fixed mining productivity 2 having R-NM packs as a prerequisite.
    - Fixing mining productivty 1 not taking A-ATM packs.

---------------------------------------------------------------------------------------------------
Version: 0.5.133
  The why couldnt assembling machines just have more fluid slots Update:

  Changes:
    - Changed lead and gallium ratios to be cheaper and smaller-scale in comparison to the amount needed for science.