@@ -90,6 +90,8 @@ Date: 2024-08-09
     - Changed Crude oil fractional distillation to a trigger technology.
     - Changed Chlorine processing to a trigger technology.
     - Changed butene/butane cracking to washing plants, to lower the need of chemical plants.
+    - Changed Assembler 3's to take laser heads.
+    - Lowered the cost of Assembler 3's.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
@@ -106,10 +108,12 @@ Date: 2024-08-09
     - Fixed rubidium's ratios being fucked in comparison to the amount needed in science.
     - FINALLY MADE ACID PLANTS LOOK DIFFERENT OH MY GOD
     - Fixed the vanadium modular battery technologies not having the correct color.
-    - Fixed the vanadium modular batterie MK2's recipe.
+    - Fixed the vanadium modular batteries MK2's recipe.
     - Moved calcium chloride into the calcium subgroup.
     - Fixed mining productivity 2 having R-NM packs as a prerequisite.
     - Fixing mining productivty 1 not taking A-ATM packs.
+    - "Fixed" the Circuit Megassembler needing a seperate recipe for circuits.
+    - Fixed Laser damage and speed's science pack requirements.
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.133
